<resources>
    <string name="app_name">PCervice</string>
    <string name="login">LOGIN</string>
    <string name="correo">Correo</string>
    <string name="clave">Contraseña</string>
    <string name="ingreso">Ingresar</string>
    <string name="olv_clave">Olvidó su contraseña?</string>
    <string name="reg_text">No posee una cuenta?</string>
    <string name="reg">Registrarse</string>
    <string name="regis">Registro</string>
    <string name="reg_tec">Registro de técnicos</string>
    <string name="recordar">Recuerdame</string>

    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="rep_clave">Repetir contraseña</string>
    <string name="tuser">Tipo de usuario</string>
    <string name="cliente">Cliente</string>
    <string name="tecnico">Técnico</string>}
    <string name="ciudad">Ciudad</string>

    <string name="buscar">Buscar</string>
    <string name="config">Configuración</string>
    <string name="cerrar">Cerrar Sesión</string>
    <string name="perfil">Perfil</string>

    <string name="tomar">Tomar foto</string>
    <string name="subir">Subir foto</string>
    <string name="publicaciones">Publicaciones realizadas</string>
    <string name="antecedentes">Archivo de antecedentes</string>
    <string name="archivo">Subir archivo</string>
    <string name="pregunta">¿Por qué pedimos todo esto?</string>
    <string name="pregunta2">¿Por qué me obliga a poner foto?</string>
    <string name="pregunta3">¿Por qué tengo que entregar mis antecedentes?</string>
    <string name="pregunta4">¿Mi información la podrá ver toda la gente?</string>
    <string name="desc">Descripción</string>
    <string name="cerrars">Cerrar</string>

    <string name="abrir_drawer">Drawer Abierto</string>
    <string name="cerrar_drawer">Drawer cerrado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>